<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_PLC_Interfaces" Id="{b4d32037-6176-4da1-a9af-c4baba1b3a23}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	(*ETHERCAT BRRIDGE COM STATUS*)
    //0: Other side is in OP state, >0: Error
    {attribute 'TcLinkTo' := 'TIIB[LAMP_MOTION_E03_EL6695]^SYNC Inputs^TxPDO state
    '}
    xEcatBridge_TxPDO_state AT %I* :BOOL;

    //0: External device connectd, 1: External device not connected

	{attribute := 'TIIB[LAMP_MOTION_E03_EL6695]^SYNC Inputs^External device not connected
	'}
    xEcatBridge_External_device_not_connected AT %I* : BOOL;

    //0 = Data valid, 1 = Data invalid
    {attribute 'TcLinkTo' := 'TIIB[LAMP_MOTION_E03_EL6695]^WcState^WcState
    '}
    xEcatBridge_WcState AT %I* : BOOL;
	
	{attribute 'TcLinkTo' := 'TIIB[LAMP_MOTION_E03_EL6695]^IO Inputs^LAMP_GJ_VRC_01_OPEN_LS'}
	xLAMP_GJ_VRC_01_OPEN_LS  AT %I* : BOOL;
	
	{attribute  'TcLinkTo' := 'TIIB[LAMP_MOTION_E03_EL6695]^IO Outputs^LAMP_GJY_OUT'}
	xLAMP_GJY_OUT AT %Q*: BOOL;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>